# fs2open.github.com

./: .clang-format  .clang-tidy  .cursorrules  .cvsignore  .dockerignore  .drone.yml  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  AUTHORS  About.md  Authors.md  CLAUDE.md  CMakeLists.txt  COMMUNITY_QUEUE.md  CONTEXT.md  CONTRIBUTING.md  COPYING.md  ChangeLog  Changelog.md  Copying.md  FS2_Open.prj  Freespace2.dsp  Freespace2.dsw  GOVERNANCE.md  INSTALL  Makefile.am  Makefile.in  NEWS  PLAN-unify-tree-flags.md  README  README.md  Readme.md  SEXP_TREE_PLAN.md  Unlicense.md  UpdatingDocumentation.md  acinclude.m4  (+16 more)
code/: CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Makefile.in  PreProcDefines.h  code.dsp  default_files.cmake  prefix_header.h  shaders.cmake  source_groups.cmake  voice_rec.cmake
code/ExternalDLL/: externalcode.h
code/actions/: Action.cpp  Action.h  ActionDefinition.cpp  ActionDefinition.h  ActionDefinitionManager.cpp  ActionDefinitionManager.h  BuiltinActionDefinition.cpp  BuiltinActionDefinition.h  Program.cpp  Program.h  common.cpp  common.h
code/ai/: AGENTS.md  ai.cpp  ai.h  ai_class_info.cpp  ai_class_info.h  ai_flags.h  ai_profiles.cpp  ai_profiles.h  aibig.cpp  aibig.h  aicode.cpp  aicode.cpp.orig  aigoals.cpp  aigoals.h  aiinternal.h  ailua.cpp  ailua.h  aimodular.cpp  aimodular.h  aiturret.cpp
code/anim/: animplay.cpp  animplay.h  packunpack.cpp  packunpack.h
code/asteroid/: asteroid.cpp  asteroid.h  asteroid_info.cpp  asteroid_info.h
code/autopilot/: autopilot.cpp  autopilot.h
code/bmpman/: bm_examples.cpp  bm_internal.h  bmpman.cpp  bmpman.h
code/camera/: camera.cpp  camera.h  photomode.cpp  photomode.h
code/cfile/: AGENTS.md  cfile.cpp  cfile.h  cfilearchive.cpp  cfilearchive.h  cfilecompression.cpp  cfilecompression.h  cfilelist.cpp  cfilemod.cpp  cfilemod.h  cfilesystem.cpp  cfilesystem.h  compression_utils.cpp  compression_utils.h
code/cfilearchiver/: CMakeLists.txt  cfilearchiver.cpp
code/cfileextractor/: CMakeLists.txt  cfileextractor.cpp
code/cheats_table/: cheats_table.cpp  cheats_table.h
code/cmdline/: AGENTS.md  cmdline.cpp  cmdline.h  spec.json
code/cmeasure/: cmeasure.cpp  cmeasure.h
code/config/: ConfigurationItem.cpp  ConfigurationItem.h  ConfigurationManager.cpp  ConfigurationManager.h  serializers.cpp  serializers.h
code/controlconfig/: controlsconfig.cpp  controlsconfig.h  controlsconfigcommon.cpp  presets.cpp  presets.h
code/coordinate_points/: coordinate_point.cpp  coordinate_point.h  coordinate_point_flags.h  coordinate_point_render.cpp  coordinate_point_render.h  coordinate_shapes.cpp  coordinate_shapes.h
code/cryptstring/: cryptstring.cpp
code/cutscene/: Decoder.cpp  Decoder.h  VideoPresenter.cpp  VideoPresenter.h  cutscenes.cpp  cutscenes.h  decoder16.cpp  decoder8.cpp  movie.cpp  movie.h  mve_audio.cpp  mvelib.cpp  mvelib.h  mveplayer.cpp  oggplayer.cpp  oggplayer.h  player.cpp  player.h
code/ddsutils/: bcdec.h  ddsutils.cpp  ddsutils.h
code/debris/: debris.cpp  debris.h
code/debugconsole/: console.cpp  console.h  consolecmds.cpp  consoleparse.cpp  consoleparse.h  dbugfile.cpp  dbugfile.h  timerbar.cpp  timerbar.h
code/decals/: decals.cpp  decals.h
code/def_files/: ai_profiles.tbl  batched-f.sdr  bloom-comp-f.sdr  blur-f.sdr  brightpass-f.sdr  controlconfigdefaults.tbl  decal-v.sdr  def_files-generic.cpp  def_files-win32.cpp  def_files.cpp  def_files.h  default-material-f.sdr  deferred-clear-f.sdr  deferred-clear-v.sdr  deferred-f.sdr  deferred-v.sdr  effect-distort-f.sdr  effect-distort-v.sdr  effect-f.sdr  effect-particle-f.sdr  effect-screen-g.sdr  effect-v.sdr  fxaa-f.sdr  fxaa-v.sdr  fxaapre-f.sdr  generated_def_files-generic.inc.in  generated_def_files-win32.h.in  iff_defs.tbl  ls-f.sdr  main-f.sdr  main-g.sdr  main-v.sdr  nanovg-f.sdr  objecttypes.tbl  passthrough-f.sdr  passthrough-v.sdr  post-f.sdr  post-v.sdr  shadowdebug-f.sdr  shadowdebug-v.sdr  (+5 more)
code/demo/: demo.cpp  demo.h
code/directx/: dx8show.cpp  dx8show.h  vasync.h  vd3dcaps.h  vd3di.h  vd3drm.h  vd3drmdef.h  vd3drmobj.h  vd3drmwin.h  vd3dtypes.h  vddraw.h  vdinput.h  vdplobby.h  vdsetup.h  vdvp.h
code/events/: events.cpp  events.h
code/exceptionhandler/: exceptionhandler.cpp  exceptionhandler.h
code/executor/: Executor.cpp  (+9 more)
fred2/: AGENTS.md  AltShipClassDlg.cpp  AltShipClassDlg.h  CMakeLists.txt  FictionViewerDlg.cpp  MFCGraphicsOperations.cpp  MFCGraphicsOperations.h  OperatorComboBox.cpp  OperatorComboBox.h  addmodifycontainerdlg.cpp  addmodifycontainerdlg.h  addvariabledlg.cpp  addvariabledlg.h  adjustgriddlg.cpp  adjustgriddlg.h  asteroideditordlg.cpp  asteroideditordlg.h  bgbitmapdlg.cpp  bgbitmapdlg.h  briefingeditordlg.cpp  briefingeditordlg.h  calcrelativecoordsdlg.cpp  calcrelativecoordsdlg.h  campaigneditordlg.cpp  campaigneditordlg.h  campaignfilelistbox.cpp  campaignfilelistbox.h  campaigntreeview.cpp  campaigntreeview.h  campaigntreewnd.cpp  campaigntreewnd.h  checkboxlistdlg.cpp  checkboxlistdlg.h  cmdbrief.cpp  cmdbrief.h  createwingdlg.cpp  createwingdlg.h  customdatadlg.cpp  customdatadlg.h  customstringsdlg.cpp  (+116 more)
freespace2/: CMakeLists.txt  SDLGraphicsOperations.cpp  SDLGraphicsOperations.h  freespace.cpp  freespace.h  freespaceresource.h  levelpaging.cpp  resources.cmake
fs2_open/: .cvsignore  COPYING  ChangeLog  FS2OpenSCPReadMe.doc  Freespace2.dsp  INSTALL  Makefile.am  Makefile.in  README  acinclude.m4  autogen.sh  configure.ac  fs2_open.dsp  fs2_open.w32.mak  fs2open.Doxyfile
lib/: CMakeLists.txt  FFmpeg.cmake  OpenAL.cmake  SDL2.cmake  SDL3.cmake  antlr4.cmake  boost.cmake  freetype.cmake  libRocket.cmake  opengl.cmake  prebuilt.cmake  vulkan.cmake
parsers/: CMakeLists.txt
qtfred/: AGENTS.md  CHANGELOG.md  CMakeLists.txt  DESIGN_GUIDE.md  README.md  source_groups.cmake
test/: CMakeLists.txt
wxfred2/: CMakeLists.txt  README  docfred.h  frmFRED2.cpp  frmFRED2.h  glcViewport.cpp  glcViewport.h  glcviewport.cpp  glrcmissionframe.h  resources.cmake  source_groups.cmake  wxFredRender.cpp  wxFredRender.h  wxfred2.cpp  wxfred2.h  wxfredstubs.cpp
(+4915 files in other folders)
